# oqd-cloud

./: .gitignore  README.md  mkdocs.yaml  pyproject.toml
.github/workflows/: CI.yml  pytest.yml
docker/: .dockerignore  Dockerfile  docker-compose.yaml  requirements.txt  supervisord.conf
docs/: index.md  installation.md
docs/explanation/: docker-compose.md
docs/reference/: client.md  provider.md  server.md
src/: client.py
src/cloud/: client.py  provider.py
src/cloud/server/: app.py  database.py  jobqueue.py  model.py
src/cloud/server/route/: auth.py  job.py  user.py
src/oqd_cloud/: client.py  provider.py
src/oqd_cloud/server/: app.py  database.py  jobqueue.py  main.py  model.py  storage.py
src/oqd_cloud/server/route/: __init__.py  auth.py  job.py  user.py
src/server/: app.py  database.py  jobqueue.py
src/server/route/: auth.py  job.py  user.py
tests/: atomic.json  test.py  test_client.py  test_h5.py  test_storage.py
